Make ExtensionSet::GetExtensionOrApp{ID}ByURL support filesystem URLs.

Filesystem and blob URLs don't have a chrome-extension:// scheme
according to GURL, but do according to url::Origin.

BUG=851503, 840857

Change-Id: Ia5e4cf5f9c3d04dff07d4f31da6d774d574af653
Reviewed-on: https://chromium-review.googlesource.com/1093402
Commit-Queue: Charlie Reis <creis@chromium.org>
Reviewed-by: Alex Moshchuk <alexmos@chromium.org>
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#566677}
Former-commit-id: 2c8441547e38709d7a5c804b23375fccd0fed622